I fixed the positioning & alignment of the call to action box.
I adjusted the positioning of the box using margin
& padding and setting the display to flex. I also
changed the width property to ensure it doesn't grow
too large.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -108,6 +108,7 @@ figure img {
     color: #1f2937;
 }
 
+
 .section4-button {
     background-color: #3882F6;
     color: #E5E7Eb;
@@ -120,6 +121,17 @@ figure img {
     background-color: #3882F6;
     border-radius: 10px;
     color: #E5E7Eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    max-width: 600px;
+    margin: 40px auto;
+    padding: 20px;
+}
+
+.section4-text {
+    line-height: 0.6;
 }
 
 .setion4-header {
